name:                StatefulComps
version:             0.2.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/StatefulComps#readme
license:             BSD3
license-file:        LICENSE
author:              oofpgit@gmail.com
maintainer:          oofpgit@gmail.com
copyright:           2017-2019 oofpgit@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src, src/EventDistr
  ghc-options:         -Wall
  exposed-modules:     EventDistr
                     , EventDistrL
  other-modules:       Lib.Prelude
  build-depends:       base >= 4.7 && < 5
                     , protolude 
                     , network
                     , text
                     , lens
                     , containers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable StatefulComps-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , StatefulComps
                     , lens
                     , text
                     , protolude 
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite StatefulComps-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , StatefulComps
                     , protolude >= 0.1.6 && < 0.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/githubuser/StatefulComps
